# PCA-kandidat-test

./: .env.example  .gitignore  Dockerfile  README.md  ft26_pca_analysis.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
public/: app.js  styles.css
src/: config.ts  index.ts  types.ts
src/lib/: pca.ts
src/routes/: api.ts  pages.ts
src/services/: altinget.ts  data-store.ts  tv2.ts
src/templates/: site.ts
