[project]
name = "pca-kandidat-test"
version = "0.1.0"
description = "Generate a PCA-based HTML report from Altinget candidate-test data."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
]

[tool.uv]
package = false
